--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ gag = "0.1"
 bitfield = "0.13"
 memoffset = "0.5"
 getset = "0.1"
+itertools = "0.9"
+structopt = "0.3"
+parse-display = "0.1"
 
 [build-dependencies]
 num_cpus = "1.13"
