--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ getset = "0.1"
 itertools = "0.9"
 structopt = "0.3"
 parse-display = "0.1"
+errno = "0.2"
 
 [build-dependencies]
 num_cpus = "1.13"
