Include a modified version of pkg-config
For enabling static linking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ either = "1.5"
 
 [build-dependencies]
 num_cpus = "1.13"
-pkg-config = "0.3"
+pkg-config = { path = "./pkg-config" }
 bindgen = "0.53"
 
 [profile.release]
