--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ structopt = "0.3"
 parse-display = "0.1"
 errno = "0.2"
 either = "1.5"
+rpassword = "4"
+scrypt = "0.2"
+byteorder = "1.3"
 
 [build-dependencies]
 num_cpus = "1.13"
